Adding paged requests
