# src/AutoHome.RestClient/swagger.json
@@ -53,16 +53,31 @@
         ],
         "summary": "Lists triggers",
         "operationId": "ListTrigger",
+        "parameters": [
+          {
+            "name": "PageIndex",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          },
+          {
+            "name": "PageSize",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Success",
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/ListTriggersResult"
-                  }
+                  "$ref": "#/components/schemas/ListTriggersResultIPagedResult"
                 }
               }
             }
@@ -182,16 +197,31 @@
         ],
         "summary": "Lists devices",
         "operationId": "ListDevice",
+        "parameters": [
+          {
+            "name": "PageIndex",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          },
+          {
+            "name": "PageSize",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Success",
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/ListDevicesResult"
-                  }
+                  "$ref": "#/components/schemas/ListDevicesResultIPagedResult"
                 }
               }
             }
@@ -470,16 +500,31 @@
         ],
         "summary": "Lists triggers events",
         "operationId": "ListTriggerEvents",
+        "parameters": [
+          {
+            "name": "PageIndex",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          },
+          {
+            "name": "PageSize",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Success",
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/ListTriggerEventsResult"
-                  }
+                  "$ref": "#/components/schemas/ListTriggerEventsResultIPagedResult"
                 }
               }
             }
@@ -687,6 +732,50 @@
         },
         "additionalProperties": false
       },
+      "ListDevicesResultIPagedResult": {
+        "type": "object",
+        "properties": {
+          "totalItems": {
+            "type": "integer",
+            "format": "int32",
+            "readOnly": true
+          },
+          "currentPage": {
+            "type": "integer",
+            "format": "int32",
+            "readOnly": true
+          },
+          "pageSize": {
+            "type": "integer",
+            "format": "int32",
+            "readOnly": true
+          },
+          "totalPages": {
+            "type": "integer",
+            "format": "int32",
+            "readOnly": true
+          },
+          "startPage": {
+            "type": "integer",
+            "format": "int32",
+            "readOnly": true
+          },
+          "endPage": {
+            "type": "integer",
+            "format": "int32",
+            "readOnly": true
+          },
+          "data": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ListDevicesResult"
+            },
+            "nullable": true,
+            "readOnly": true
+          }
+        },
+        "additionalProperties": false
+      },
       "ListTriggerEventsResult": {
         "type": "object",
         "properties": {
@@ -709,6 +798,50 @@
         },
         "additionalProperties": false
       },
+      "ListTriggerEventsResultIPagedResult": {
+        "type": "object",
+        "properties": {
+          "totalItems": {
+            "type": "integer",
+            "format": "int32",
+            "readOnly": true
+          },
+          "currentPage": {
+            "type": "integer",
+            "format": "int32",
+            "readOnly": true
+          },
+          "pageSize": {
+            "type": "integer",
+            "format": "int32",
+            "readOnly": true
+          },
+          "totalPages": {
+            "type": "integer",
+            "format": "int32",
+            "readOnly": true
+          },
+          "startPage": {
+            "type": "integer",
+            "format": "int32",
+            "readOnly": true
+          },
+          "endPage": {
+            "type": "integer",
+            "format": "int32",
+            "readOnly": true
+          },
+          "data": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ListTriggerEventsResult"
+            },
+            "nullable": true,
+            "readOnly": true
+          }
+        },
+        "additionalProperties": false
+      },
       "ListTriggersResult": {
         "type": "object",
         "properties": {
@@ -727,6 +860,50 @@
           "interval": {
             "type": "number",
             "format": "double"
+          }
+        },
+        "additionalProperties": false
+      },
+      "ListTriggersResultIPagedResult": {
+        "type": "object",
+        "properties": {
+          "totalItems": {
+            "type": "integer",
+            "format": "int32",
+            "readOnly": true
+          },
+          "currentPage": {
+            "type": "integer",
+            "format": "int32",
+            "readOnly": true
+          },
+          "pageSize": {
+            "type": "integer",
+            "format": "int32",
+            "readOnly": true
+          },
+          "totalPages": {
+            "type": "integer",
+            "format": "int32",
+            "readOnly": true
+          },
+          "startPage": {
+            "type": "integer",
+            "format": "int32",
+            "readOnly": true
+          },
+          "endPage": {
+            "type": "integer",
+            "format": "int32",
+            "readOnly": true
+          },
+          "data": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ListTriggersResult"
+            },
+            "nullable": true,
+            "readOnly": true
           }
         },
         "additionalProperties": false
