# src/AutoHome.Server/Endpoints/Devices/List.ListDevicesRequest.cs
@@ -1,0 +1,9 @@
+﻿using AutoHome.Core;
+
+namespace AutoHome.Server.Endpoints.Devices;
+
+public class ListDevicesRequest : IPagedRequest
+{
+    public int? PageIndex { get; set; }
+    public int? PageSize { get; set; }
+}
