# src/AutoHome.Server/Endpoints/Triggers/List.ListTriggersRequest.cs
@@ -1,0 +1,9 @@
+﻿using AutoHome.Core;
+
+namespace AutoHome.Server.Endpoints.Triggers;
+
+public class ListTriggersRequest : IPagedRequest
+{
+    public int? PageIndex { get; set; }
+    public int? PageSize { get; set; }
+}
